<resources>
    <string name="app_name">The Foodie Network</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>

    <string name="login">Login</string>
    <string name="signup"><u>Create an account</u></string>

    <string name="saveSuccess">Profile save was success!</string>
    <string name="saveFail">Error while saving profile</string>

    <string name="noRequests">No Requests</string>
    <string name="noPendingRequests">You have no pending requests.</string>

    <string name="welcomeMessage">Welcome to the Foodie Network!</string>
    <string name="ratingPrompt">Select your rating:</string>
    <string name="restaurantSearch">Search for a restaurant</string>

    <string name="recommendText">Would you recommend this place to a friend?</string>

    <string-array name="scopes_array">
        <item>Everyone</item>
        <item>Friends</item>
    </string-array>

    <string-array name="sort_array">
        <item>sort by username</item>
        <item>A to Z</item>
        <item>Z to A</item>
    </string-array>

</resources>