<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/dumpling" />

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/audiowide"
            android:gravity="center"
            android:text="@string/welcomeMessage"
            android:textColor="@color/colorPinkAccent"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/usernameEditText"
            style="@style/loginEditTextBox"
            android:layout_marginTop="30dp"
            android:hint="Username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/passwordEditText"
            style="@style/loginEditTextBox"
            android:hint="Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            style="@style/roundLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorBlue"
            android:text="@string/login"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/SignupTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/signup"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>